# performance_predictor

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
artifacts/: model.pkl  preprocessor.pkl
notebooks/: model_training.ipynb  student_performance_eda.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/config/: params.yml
src/pipeline/: predict_pipeline.py
templates/: home.html  index.html
