[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Project-1-ml"
version = "0.0.1"
description = "My ML project"
authors = [{ name = "Abhinav", email = "abhinavkumarsingh2023@gmail.com" }]
dependencies = [
    "pandas==2.3.2",
    "numpy==2.3.2",
    "seaborn==0.13.2",
]