[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "performance-predictor"
version = "0.0.1"
description = "A machine learning application to predict student math scores based on various demographic and academic factors"
authors = [{ name = "Abhinav", email = "abhinavkumarsingh2023@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas==2.3.2",
    "numpy==2.3.2",
    "scikit-learn==1.4.0",
    "fastapi==0.110.0",
    "uvicorn==0.28.0",
    "pydantic==2.6.0",
    "jinja2==3.1.3",
    "python-multipart==0.0.9",
    "catboost==1.2.2",
    "xgboost==2.0.3",
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    "pyyaml==6.0.1",
    "dill==0.3.8",
]

[project.urls]
"Homepage" = "https://github.com/Abhinavexists/performance_predictor"
"Bug Tracker" = "https://github.com/Abhinavexists/performance_predictor/issues"